# Tetris-Game-in-Cpp

Project version 1/: CMakeLists.txt
Project version 1/Sources/: block.cpp  game.cpp  game.h  gamemenu.h  main.cpp
Project version 1/raylib/: CMakeLists.txt
Project version 2/: CMakeLists.txt  ReadMe.txt
Project version 2/Sources/: Themes.cpp  Themes.h  block.h  blocks.cpp  board.cpp  board.h  colors.cpp  colors.h  gamemenu.cpp  gamemenu.h  main.cpp  position.cpp  position.h  scores.cpp  scores.h
